--- a/autonomy_core/map_plan/map_plan_launch/config/mapper.yaml
+++ b/autonomy_core/map_plan/map_plan_launch/config/mapper.yaml
@@ -13,7 +13,7 @@ global:
   num_point_cloud_skip: 3 # the global map update frequency = point cloud frequency / num_point_cloud_skip
   max_raycast_range: 30.0 # max raycast range, the smaller, the less computation demand, but shorter perception range
   dilate_xy: true # dilate global map along x and y axis (recommended value: true)
-  dilate_z: true # dilate global map along z axis (recommended value: false)
+  dilate_z: false # dilate global map along z axis (recommended value: false)
   decay_times_to_empty: 30 # number of times of decay to empty, 0 means no decay, the noisier your state estimator is, the smaller this value should be (when using ground-truth pose, set this as 0)
 
 local: # local map range z and center_z will be the same as storage map
