fix typo and add missing package dependency

--- a/autonomy_core/state_machine/state_machine_core/package.xml
+++ b/autonomy_core/state_machine/state_machine_core/package.xml
@@ -27,6 +27,7 @@
   <depend>planning_ros_utils</depend>
   <depend>planning_ros_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>smach_ros</depend>
 
 
 
