Squashed commit of the following:
commit e373c76fd60e89a46608056a7b73e77ce13b7920
Author: Laura Jarin-Lipschitz <laurajar@seas.upenn.edu>
Date:   Sun May 28 19:07:37 2023 -0400

    Add missing git ignore and missed name changes in tests

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,9 @@ waypoint_navigation_plugin/
 DecompROS/
 catkin_simple/
 kr_demo_planner/
+kr_planning_msgs/
 external/
+
 #===========
 # C++
 # ===========
