Add kr_planning_msgs to Dockerfile build

--- a/autonomy_core/map_plan/Dockerfile
+++ b/autonomy_core/map_plan/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /root/map_plan_ws
 COPY autonomy_core/map_plan/ src/
 
 RUN catkin init && catkin config --extend /root/control_ws/devel
-# RUN vcs import --input src/external-repos.yaml src/
+RUN vcs import --input src/external-repos.yaml src/
 RUN catkin build -j2 --no-status -DCMAKE_BUILD_TYPE=RelWithDebInfo
 
 COPY autonomy_core/map_plan/docker/entrypoint.sh /entrypoint.sh
