mostly implement dispersion planner, still some bugs/todos

--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -1,19 +1,18 @@
 # This should contain tracker parameters
 
-take_off_tracker:  
+take_off_tracker:
   thrust_rate: 6.0 # default 5.0. If the robot cannot take off after reaching max_thrust, try increasing this (with caution if you're running real-robot experiments)
   max_thrust: 5.0 # default 4.0. If the robot cannot take off after reaching max_thrust, try increasing this (with caution if you're running real-robot experiments)
   min_thurst: -9.8
   epsilon: 0.01
 
-
-land_tracker: 
+land_tracker:
   epsilon: 2.0 # landing process stops when the position command is epsilon below odom
   vel: 0.5 # landing velocity, will hit ground with this velocity
   acc: 2.0 # landing acceleration
 
 trajectory_tracker:
-  max_pos_error: 1.00  # maximum allowed trajectory tracking error in meters (recommended value: 0.5-1.0)
+  max_pos_error: 1.00 # maximum allowed trajectory tracking error in meters (recommended value: 0.5-1.0)
   align_yaw: false # default false
   yaw_speed_magnitude: 0.5 # in rad/s the yaw alignment rate (recommended value: 0.3-1.0)
   use_lambda: true # pose error checking
@@ -26,12 +25,11 @@ trajectory_planner:
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
   use_3d_local: false # local planner operates in 3D (true) or 2D (false)
-  planner_type: 0 # 0: MPL, 1: Optimization Planner
+  planner_type: 2 # 0: MPL, 1: Optimization Planner, 2: dispersion planner
 
   use_3d_global: false # global planner operates in 3D (true, in this case use_3d_local has to be set as true) or 2D (false)
   z_cost_factor: 1 # global map z cost factor, this also influences the vertical semi field of view of global planner into 45-degree / z_cost_factor  (cost_along_z = z_cost_factor * cost_along_x_or_y)
   # TODO: Z factor not working, has a bug, set value to 1 always!
-
 
   max_v_z: 1.5 # z-direction maximum velocity, recommended value: 1.5
   max_a_z: 3.0 # z-direction maximum acceleration, recommended value: 3.0
@@ -62,29 +60,28 @@ trajectory_planner:
   search/w_time: 3.0 # time weight
   search/use_jerk: false # set false now
   search/time_res: 0.15 # time resolution to index the path
-  map_frame: "quadrotor/map" 
-
+  map_frame: "quadrotor/map"
 
 stopping_policy:
-  acc_xy_des: 4.0 # stopping policy x-y maximum acceleration 
-  jerk_xy_des: 2.0 # stopping policy x-y maximum jerk 
-  acc_z_des: 2.0 # stopping policy z maximum acceleration 
-  jerk_z_des: 1.0 # stopping policy z maximum jerk 
+  acc_xy_des: 4.0 # stopping policy x-y maximum acceleration
+  jerk_xy_des: 2.0 # stopping policy x-y maximum jerk
+  acc_z_des: 2.0 # stopping policy z maximum acceleration
+  jerk_z_des: 1.0 # stopping policy z maximum jerk
   acc_yaw_des: 0.05 # stopping policy yaw maximum angular acceleration in rad/(s^2)
 
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
-  waypoint_reach_xy_threshold: 10.0 # x-y distance threshold, within which intermidiate waypoint is regarded as reached 
+  waypoint_reach_xy_threshold: 10.0 # x-y distance threshold, within which intermidiate waypoint is regarded as reached
   final_goal_reach_xy_threshold: 5.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
   close_to_final_dist: 10.0 # distance-to-goal threshold, should be larger than final_goal_reach_xy_threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds
   max_local_plan_trials: 1 # should be set as 1 since state machine is now able to try multiple times after planner failures
-  max_horizon: 10 # defulat 5, should be larger than local_plan_timeout_duration*max_local_plan_trials*local_replan_rate 
+  max_horizon: 10 # defulat 5, should be larger than local_plan_timeout_duration*max_local_plan_trials*local_replan_rate
   global_planner_verbose: false # verbose mode, default false
   odom_frame: "quadrotor/odom" # odometry reference frame
   map_frame: "quadrotor/map" # SLAM reference frame (only for using two-reference-frame system, otherwise this should be set to be the same as odom_frame)
 
 state_machine:
   local_replan_rate: 2.0 # local replan frequency, calling local planner every (1/local_replan_rate) seconds, (float 32)
-  global_replan_rate_factor : 3 # global_replan_rate_factor = local replan frequency / global replan frequency, should be an integer and >= 1, (int)
+  global_replan_rate_factor: 3 # global_replan_rate_factor = local replan frequency / global replan frequency, should be an integer and >= 1, (int)
   max_replan_trials: 100 # max allowed trials to re-enter replanner
