--- a/autonomy_core/map_plan/action_planner/package.xml
+++ b/autonomy_core/map_plan/action_planner/package.xml
@@ -33,6 +33,7 @@
   <depend>opt_planner</depend>
   <depend>decomp_ros_utils</depend>
   <depend>decomp_ros_msgs</depend>
+  <depend>motion_primitives</depend>
 
   <export>
   </export>
