--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -25,8 +25,8 @@ trajectory_planner:
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
   use_3d_local: false # local planner operates in 3D (true) or 2D (false)
-  search_planner_type: 1 # 0: MPL, 1: dispersion planner
-  opt_planner_type: 0 # 0: Double Description
+  search_planner_type: 0 # 0: MPL, 1: dispersion planner
+  opt_planner_type: 1 # 0: Double Description 1: gcopter
   #TODO(Laura) fix path
   dispersion/graph_file: "/home/yifei/Documents/optimal_ctrl/80.json"
 
