--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -24,7 +24,7 @@ trajectory_planner:
   max_a: 4.0 # x-y-direction maximum acceleration, recommended value: for 2-D 7, for 3-D 2
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
-  use_3d_local: false # local planner operates in 3D (true) or 2D (false)
+  use_3d_local: true # local planner operates in 3D (true) or 2D (false)
   search_planner_type: 2 # 0: MPL, 1: dispersion planner, 2: JPS (geometric)
   opt_planner_type: 1 # 0: Double Description 1: gcopter
   #TODO(Laura) fix path
