--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -25,7 +25,7 @@ trajectory_planner:
   max_j: 2.0 # x-y-direction maximum jerk, recommended value: for 2-D 3, for 3-D 2
   max_u: 2.0 # x-y-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: for 2-D 3, for 3-D 1, for each axis jerk increment choice is -max_u, 0, max_u
   use_3d_local: true # local planner operates in 3D (true) or 2D (false)
-  search_planner_type: 2 # 0: MPL, 1: dispersion planner, 2: JPS (geometric)
+  search_planner_type: 2 # 0: MPL, 1: dispersion planner, 2: JPS (geometric) 3: pass through from global planner
   opt_planner_type: 1 # 0: Double Description 1: gcopter
   #TODO(Laura) fix path
   dispersion/graph_file: "/home/yifei/Documents/optimal_ctrl/80.json"
@@ -39,7 +39,7 @@ trajectory_planner:
   max_j_z: 3.0 # z-direction maximum jerk, recommended value: 3.0
   max_u_z: 3.0 # z-direction control inputs increase / decrease step, must be smaller than max_j, recommended value: 3.0
   tol_pos: 3.0 # tolerance of distance for goal region, 0 means no tolerance, -1 means no limitation, recommended value: 3.0 for 2-D and 5.0 for 3-D
-  global_goal_tol_vel: 2.0 # tolerance of velocity for goal region, recommended value: 2.0 for 2-D and 3.0 for 3-D
+  global_goal_tol_vel: 3.0 # tolerance of velocity for goal region, recommended value: 2.0 for 2-D and 3.0 for 3-D
   global_goal_tol_acc: -1 # tolerance of acceleration for goal region, recommended value: -1
   dt: 1.0 # execution time for each primitive, recommended value: 1.0
   ndt: 1.0 # default 1
@@ -74,7 +74,7 @@ stopping_policy:
 local_global_server:
   # local planning horizon will be from robot to the local voxel map boundary
   waypoint_reach_xy_threshold: 10.0 # x-y distance threshold, within which intermidiate waypoint is regarded as reached
-  final_goal_reach_xy_threshold: 5.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
+  final_goal_reach_xy_threshold: 10.0 # within which final waypoint is regarded as reached, this should be smaller than waypoint_reach_threshold
   close_to_final_dist: 10.0 # distance-to-goal threshold, should be larger than final_goal_reach_xy_threshold, within which the velocity and acceleration checking will be turned on, -1 means no velocity checking at all
   local_plan_timeout_duration: 1.0 # local planner timeout in seconds
   max_local_plan_trials: 1 # should be set as 1 since state machine is now able to try multiple times after planner failures
