changed planner to include iLQR, not fully implemented

--- a/autonomy_core/map_plan/action_planner/package.xml
+++ b/autonomy_core/map_plan/action_planner/package.xml
@@ -35,6 +35,7 @@
   <depend>decomp_ros_msgs</depend>
   <depend>motion_primitives</depend>
   <depend>gcopter</depend>
+  <depend>kr_ilqr_optimizer</depend>
 
   <export>
   </export>
