got it to work, always track continuous traj, still need to add 2 items in action

--- a/autonomy_core/map_plan/action_planner/CMakeLists.txt
+++ b/autonomy_core/map_plan/action_planner/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(action_planner)
 
 set(CMAKE_CXX_STANDARD 17)
-
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 find_package(Boost REQUIRED COMPONENTS timer)
 find_package(
@@ -19,6 +19,7 @@ find_package(
              jps3d
              kr_planning_rviz_plugins
              kr_planning_msgs
+             kr_ilqr_optimizer
              traj_opt_ros
              dynamic_reconfigure
              motion_primitive_library
@@ -27,7 +28,6 @@ find_package(
              decomp_ros_msgs
              motion_primitives
              gcopter
-             kr_ilqr_optimizer
             )
 
 generate_dynamic_reconfigure_options(cfg/ActionPlanner.cfg)
@@ -36,10 +36,10 @@ catkin_package(CATKIN_DEPENDS dynamic_reconfigure kr_planning_msgs gcopter kr_il
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 add_library(planners src/planner_details.cpp src/data_conversions.cpp src/primitive_ros_utils.cpp)
-target_link_libraries(planners PUBLIC ${catkin_LIBRARIES})
+target_link_libraries(planners PUBLIC ${catkin_LIBRARIES} )
 
 add_executable(global_plan_server src/global_plan_server.cpp)
-target_link_libraries(global_plan_server PUBLIC planners Boost::timer)
+target_link_libraries(global_plan_server PUBLIC planners Boost::timer )
 add_dependencies(global_plan_server ${${PROJECT_NAME}_EXPORTED_TARGETS}
                  ${catkin_EXPORTED_TARGETS})
 
