--- a/external_all.yaml
+++ b/external_all.yaml
@@ -35,9 +35,9 @@ repositories:
     url: https://github.com/catkin/catkin_simple.git
     version: master
 
-  kr_demo_planner:
+  DoubleDescription:
     type: git
-    url: git@github.com:yuwei-wu/kr_demo_planner.git
+    url: git@github.com:yuwei-wu/DoubleDescription.git
     version: kr_auto_flight
 
   motion_primitives:
