set up experiment

--- a/autonomy_core/map_plan/action_planner/CMakeLists.txt
+++ b/autonomy_core/map_plan/action_planner/CMakeLists.txt
@@ -28,6 +28,7 @@ find_package(
              decomp_ros_msgs
              motion_primitives
              gcopter
+             kr_tracker_msgs
             )
 
 generate_dynamic_reconfigure_options(cfg/ActionPlanner.cfg)
