--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,17 @@ waypoint_navigation_plugin/
 DecompROS/
 catkin_simple/
 kr_demo_planner/
+DoubleDescription/
+GCOPTER/
+altro/
+glog_catkin/
+kr_ilqr_optimizer/
+mav_comm/
+mav_trajectory_generation/
+motion_primitives/
 kr_planning_msgs/
 external/
-
+map_generator/
 #===========
 # C++
 # ===========
