--- a/autonomy_core/map_plan/mapper/CMakeLists.txt
+++ b/autonomy_core/map_plan/mapper/CMakeLists.txt
@@ -49,14 +49,14 @@ target_link_libraries(test_voxel_mapper ${catkin_LIBRARIES} ${PROJECT_NAME})
 # e.g. from the catkin root directory run:
 #   ./build/mapper/_deps/benchmark-src/tools/compare.py benchmarks file1.json file2.json 
 
-# include(FetchContent)
-# FetchContent_Declare(
-#     benchmark
-#     URL https://github.com/google/benchmark/archive/b7afda2cd2d81230737caa1073e160b6406798d7.zip
-# )
-# FetchContent_MakeAvailable(benchmark)
+include(FetchContent)
+FetchContent_Declare(
+    benchmark
+    URL https://github.com/google/benchmark/archive/b7afda2cd2d81230737caa1073e160b6406798d7.zip
+)
+FetchContent_MakeAvailable(benchmark)
 
-# add_executable(benchmarking test/benchmark_voxel_mapper.cpp)
-# target_link_libraries(benchmarking benchmark::benchmark ${PROJECT_NAME})
+add_executable(benchmarking test/benchmark_voxel_mapper.cpp)
+target_link_libraries(benchmarking benchmark::benchmark ${PROJECT_NAME})
 
 
