--- a/external_all.yaml
+++ b/external_all.yaml
@@ -7,7 +7,7 @@ repositories:
 
   kr_mav_control:
     type: git
-    url: git@github.com:shaoyifei96/kr_mav_control.git
+    url: http://github.com/KumarRobotics/kr_mav_control.git
     version: poly
 
   mrsl_quadrotor:
@@ -35,15 +35,14 @@ repositories:
     url: https://github.com/catkin/catkin_simple.git
     version: master
 
+  kr_planning_msgs:
+    type: git
+    url: git@github.com:KumarRobotics/kr_planning_msgs.git
+
   DoubleDescription:
     type: git
     url: git@github.com:yuwei-wu/DoubleDescription.git
     version: laura_dev
-
-  map_generator:
-    type: git
-    url: git@github.com:yuwei-wu/map_generator.git
-    version: vicon_map
 
   motion_primitives:
     type: git
@@ -56,6 +55,10 @@ repositories:
     version: laura_bench
 
   #below for benchmark new repos
+  kr_param_map:
+    type: git
+    url: git@github.com:KumarRobotics/kr_param_map.git
+
   kr_ilqr_optimizer:
     type: git
     url: git@github.com:KumarRobotics/kr_ilqr_optimizer.git
