--- a/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
+++ b/autonomy_core/control/control_launch/config/tracker_params_mp.yaml
@@ -29,7 +29,7 @@ trajectory_planner:
   #is being overwriten in the launch file
   opt_planner_type: 2 # -1: no planner 0: Double Description 1: gcopter 2: iLQR(Altro)
   use_discrete_traj: false # set true to use with ilqr, still a lot of tracking er
-  use_tracker_client: false # if we wait for tracker to finish before sending next command
+  use_tracker_client: true # if we wait for tracker to finish before sending next command
   # if we do not care about tracking error and want things to run fast, set this to false
   #TODO(Laura) fix path
   dispersion/graph_file: "/home/yifei/Documents/optimal_ctrl/500.json"
